--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h2>GST Conversion Calculator</h2>
   
-  <label>Enter Amount:</label>
+  <label>Original MRP:</label>
   <input type="number" id="amount" placeholder="Enter amount" />
 
   <label>Select GST Conversion:</label>
@@ -22,7 +22,7 @@
     <option value="0.8898" data-from="18" data-to="5">18% ➝ 5% (Factor 0.8898)</option>
   </select>
 
-  <label>Calculated Value:</label>
+  <label>Revised MRP:</label>
   <input type="text" id="calculated" readonly />
 
   <label>GST Change:</label>
