--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <label>Select GST Conversion:</label>
   <select id="conversion">
     <option value="">-- Choose --</option>
-    <option value="0.9375" data-from="12" data-to="5">12% ➝ 5% (Factor 0.9375)</option>
-    <option value="0.8898" data-from="18" data-to="5">18% ➝ 5% (Factor 0.8898)</option>
+    <option value="0.9375" data-from="12" data-to="5">DRUG(12% ➝ 5%) (Factor 0.9375)</option>
+    <option value="0.8898" data-from="18" data-to="5">NUTRA (18% ➝ 5%) (Factor 0.8898)</option>
   </select>
 
   <label>Revised MRP:</label>
