--- a/index.html
+++ b/index.html
@@ -3,54 +3,151 @@
 <head>
   <meta charset="UTF-8">
   <title>GST Conversion Calculator</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    label { display: block; margin-top: 10px; }
-    input, select { padding: 8px; width: 250px; margin-top: 5px; }
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f3f4f6;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* Card */
+    .card {
+      background-color: white;
+      border-radius: 0.75rem;
+      box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+                  0 4px 6px -2px rgba(0, 0, 0, 0.05);
+      transition: all 0.3s ease-in-out;
+    }
+
+    /* Gradient for results card */
+    .results-card {
+      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    }
+
+    /* Buttons */
+    .btn-primary {
+      background-color: #4f46e5;
+      color: white;
+      font-weight: 600;
+      transition: background 0.2s;
+      border: none;
+      cursor: pointer;
+    }
+
+    .btn-primary:hover {
+      background-color: #4338ca;
+    }
+
+    /* Inputs */
+    input, select {
+      width: 100%;
+      padding: 0.6rem;
+      border: 1px solid #ddd;
+      border-radius: 0.4rem;
+      margin-bottom: 1rem;
+      font-size: 1rem;
+    }
+
+    /* Utility */
+    .container {
+      max-width: 400px;
+      margin: auto;
+      padding: 1rem;
+    }
+
+    .text-center {
+      text-align: center;
+    }
+
+    .mt-4 {
+      margin-top: 1rem;
+    }
+
+    .mb-6 {
+      margin-bottom: 1.5rem;
+    }
+
+    .logo {
+      display: block;
+      margin: auto;
+      height: 80px;
+    }
   </style>
 </head>
 <body>
-  <h2>GST Conversion Calculator</h2>
-  
-  <label>Original MRP:</label>
-  <input type="number" id="amount" placeholder="Enter amount" />
 
-  <label>Select GST Conversion:</label>
-  <select id="conversion">
-    <option value="">-- Choose --</option>
-    <option value="0.9375" data-from="12" data-to="5">DRUG(12% ➝ 5%) (Factor 0.9375)</option>
-    <option value="0.8898" data-from="18" data-to="5">NUTRA (18% ➝ 5%) (Factor 0.8898)</option>
-  </select>
+  <!-- Logo -->
+  <div class="text-center p-6">
+    <!-- Replace src with your logo file -->
+    <img src="https://i.postimg.cc/ZqvLXtGV/Whats-App-Image-2025-07-03-at-10-29-21-c8d2adac.jpg"alt="Company Logo" class="logo">
+  </div>
 
-  <label>Revised MRP:</label>
-  <input type="text" id="calculated" readonly />
+  <!-- Calculator Card -->
+  <div class="container card p-6 results-card">
+    <h2 class="text-2xl font-semibold text-center mb-6">GST Conversion Calculator</h2>
 
-  <label>GST Change:</label>
-  <input type="text" id="gstChange" readonly />
+    <label>Enter Amount:</label>
+    <input type="number" id="amount" placeholder="Enter amount">
+
+    <label>Select GST Conversion:</label>
+    <select id="conversion">
+      <option value="">-- Choose --</option>
+      <option value="0.9375" data-from="12" data-to="5">DRUG 12% ➝ 5% (Factor 0.9375)</option>
+      <option value="0.8898" data-from="18" data-to="5">NUTRA 18% ➝ 5% (Factor 0.8898)</option>
+    </select>
+
+    <div class="mt-4">
+      <label>Calculated Value:</label>
+      <input type="text" id="calculated" readonly>
+    </div>
+
+    <div>
+      <label>GST Change:</label>
+      <input type="text" id="gstChange" readonly>
+    </div>
+
+    <div>
+      <label>Tax Saved:</label>
+      <input type="text" id="taxSaved" readonly>
+    </div>
+
+    <button class="btn-primary w-full p-2 rounded">Calculate</button>
+  </div>
 
   <script>
     const amountInput = document.getElementById('amount');
     const conversionSelect = document.getElementById('conversion');
     const calculatedInput = document.getElementById('calculated');
     const gstChangeInput = document.getElementById('gstChange');
+    const taxSavedInput = document.getElementById('taxSaved');
+    const button = document.querySelector('.btn-primary');
 
     function calculate() {
       const amount = parseFloat(amountInput.value) || 0;
       const factor = parseFloat(conversionSelect.value) || 0;
-      const fromGST = conversionSelect.options[conversionSelect.selectedIndex]?.dataset.from || "";
-      const toGST = conversionSelect.options[conversionSelect.selectedIndex]?.dataset.to || "";
+      const fromGST = parseFloat(conversionSelect.options[conversionSelect.selectedIndex]?.dataset.from || 0);
+      const toGST = parseFloat(conversionSelect.options[conversionSelect.selectedIndex]?.dataset.to || 0);
 
-      if (amount && factor) {
-        calculatedInput.value = (amount * factor).toFixed(2);
-        gstChangeInput.value = fromGST && toGST ? `${fromGST}% ➝ ${toGST}%` : "";
+      if (amount && factor && fromGST && toGST) {
+        const newValue = amount * factor;
+        calculatedInput.value = newValue.toFixed(2);
+        gstChangeInput.value = `${fromGST}% ➝ ${toGST}%`;
+
+        const originalGST = (amount * fromGST) / 100;
+        const newGST = (newValue * toGST) / 100;
+        const taxSaved = originalGST - newGST;
+
+        taxSavedInput.value = taxSaved.toFixed(2);
       } else {
         calculatedInput.value = "";
         gstChangeInput.value = "";
+        taxSavedInput.value = "";
       }
     }
 
-    amountInput.addEventListener('input', calculate);
-    conversionSelect.addEventListener('change', calculate);
+    button.addEventListener('click', calculate);
   </script>
 </body>
 </html>
