--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="container card p-6 results-card">
     <h2 class="text-2xl font-semibold text-center mb-6">GST Conversion Calculator</h2>
 
-    <label>Enter Amount:</label>
+    <label>Original MRP:</label>
     <input type="number" id="amount" placeholder="Enter amount">
 
     <label>Select GST Conversion:</label>
@@ -99,7 +99,7 @@
     </select>
 
     <div class="mt-4">
-      <label>Calculated Value:</label>
+      <label>Revised MRP:</label>
       <input type="text" id="calculated" readonly>
     </div>
 
