--- a/index.html
+++ b/index.html
@@ -26,20 +26,6 @@
       background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     }
 
-    /* Buttons */
-    .btn-primary {
-      background-color: #4f46e5;
-      color: white;
-      font-weight: 600;
-      transition: background 0.2s;
-      border: none;
-      cursor: pointer;
-    }
-
-    .btn-primary:hover {
-      background-color: #4338ca;
-    }
-
     /* Inputs */
     input, select {
       width: 100%;
@@ -80,8 +66,7 @@
 
   <!-- Logo -->
   <div class="text-center p-6">
-    <!-- Replace src with your logo file -->
-    <img src="https://i.postimg.cc/ZqvLXtGV/Whats-App-Image-2025-07-03-at-10-29-21-c8d2adac.jpg"alt="Company Logo" class="logo">
+    <img src="https://i.postimg.cc/ZqvLXtGV/Whats-App-Image-2025-07-03-at-10-29-21-c8d2adac.jpg" alt="Company Logo" class="logo">
   </div>
 
   <!-- Calculator Card -->
@@ -112,8 +97,6 @@
       <label>Tax Saved:</label>
       <input type="text" id="taxSaved" readonly>
     </div>
-
-    <button class="btn-primary w-full p-2 rounded">Calculate</button>
   </div>
 
   <script>
@@ -122,7 +105,6 @@
     const calculatedInput = document.getElementById('calculated');
     const gstChangeInput = document.getElementById('gstChange');
     const taxSavedInput = document.getElementById('taxSaved');
-    const button = document.querySelector('.btn-primary');
 
     function calculate() {
       const amount = parseFloat(amountInput.value) || 0;
@@ -147,7 +129,9 @@
       }
     }
 
-    button.addEventListener('click', calculate);
+    // Run automatically when user types or selects
+    amountInput.addEventListener('input', calculate);
+    conversionSelect.addEventListener('change', calculate);
   </script>
 </body>
 </html>
